--- a/src/pages/CountryPage.css
+++ b/src/pages/CountryPage.css
@@ -88,7 +88,6 @@ main p {
 @media (min-width: 20em) and (max-width: 35.3125em) {
       .page-container{
             padding: var(--spacing-100);
-            border: solid green;
       }
 
       main {
@@ -98,8 +97,24 @@ main p {
       .country-info-container{
             min-width:462px
       }
-      
+
+      .country-info-container .title{
+            font-size: 1.5rem;
+      }
+
       div.border-country-container{
             margin: var(--spacing-100) var(--spacing-300);
+            padding-bottom: var(--spacing-100);
+            width: 80vw;
+      }
+      
+      .stats-container{
+            height: 500px;
+            width: 100%;
+            flex-wrap: wrap;
+      }
+
+      img.page-flag {
+            height: 300px
       }
 }
